y.output

state 0
	$accept: .line $end 

	error  shift 6
	ASSERT  shift 9
	BYE  shift 10
	CHANGE  shift 11
	CLOSE  shift 63
	CONFIG  shift 15
	CONT  shift 14
	DATA  shift 16
	DEF  shift 17
	DELETE  shift 18
	DENORM  shift 19
	DIM  shift 20
	EDIT  shift 21
	END  shift 22
	EOL  shift 2
	FIELD  shift 23
	FOR  shift 24
	FNEND  shift 25
	GET  shift 26
	GOSUB  shift 27
	GOTO  shift 28
	HELP  shift 29
	IF  shift 30
	INPUT  shift 31
	KILL  shift 64
	LET  shift 68
	LIST  shift 35
	LISTNH  shift 36
	LSET  shift 34
	MAT  shift 37
	NEXT  shift 39
	NEW  shift 38
	OLD  shift 40
	ON  shift 41
	OPEN  shift 65
	PRINT  shift 66
	PUT  shift 44
	READ  shift 46
	RELOAD  shift 48
	REM  shift 47
	RANDOMIZE  shift 45
	RENUMBER  shift 49
	RESTORE  shift 50
	RESUME  shift 51
	RETURN  shift 52
	RSET  shift 53
	RUN  shift 54
	RUNNH  shift 55
	SAVE  shift 56
	SLEEP  shift 57
	STATS  shift 58
	STOP  shift 59
	TRACE  shift 60
	WAIT  shift 61
	BADFUNCNAME  shift 79
	BADVARIABLE  shift 82
	COMMENT  shift 12
	FNFVAR  shift 76
	FNIVAR  shift 77
	FNSVAR  shift 78
	FVAR  shift 86
	INTEGER  shift 7
	IVAR  shift 87
	LONGLINE  shift 3
	SVAR  shift 85
	.  error

	line  goto 1
	stmt_no  goto 4
	statement_list  goto 5
	statement  goto 8
	string_var  goto 70
	svar  goto 74
	svar_ref  goto 75
	nvar  goto 69
	simple_nvar  goto 72
	nvar_ref  goto 73
	fvar_ref  goto 83
	ivar_ref  goto 84
	fvar  goto 80
	ivar  goto 81
	close_stmt  goto 13
	fn_var  goto 71
	inputc  goto 32
	kill_stmt  goto 33
	open_stmt  goto 42
	print_stmt  goto 43
	assign_stmt  goto 62
	printc  goto 67

state 1
	$accept:  line.$end 

	$end  accept
	.  error


state 2
	line:  EOL.    (1)

	.  reduce 1 (src line 252)


state 3
	line:  LONGLINE.    (2)

	.  reduce 2 (src line 257)


state 4
	line:  stmt_no.EOL 
	line:  stmt_no.statement_list EOL 

	ASSERT  shift 9
	BYE  shift 10
	CHANGE  shift 11
	CLOSE  shift 63
	CONFIG  shift 15
	CONT  shift 14
	DATA  shift 16
	DEF  shift 17
	DELETE  shift 18
	DENORM  shift 19
	DIM  shift 20
	EDIT  shift 21
	END  shift 22
	EOL  shift 88
	FIELD  shift 23
	FOR  shift 24
	FNEND  shift 25
	GET  shift 26
	GOSUB  shift 27
	GOTO  shift 28
	HELP  shift 29
	IF  shift 30
	INPUT  shift 31
	KILL  shift 64
	LET  shift 68
	LIST  shift 35
	LISTNH  shift 36
	LSET  shift 34
	MAT  shift 37
	NEXT  shift 39
	NEW  shift 38
	OLD  shift 40
	ON  shift 41
	OPEN  shift 65
	PRINT  shift 66
	PUT  shift 44
	READ  shift 46
	RELOAD  shift 48
	REM  shift 47
	RANDOMIZE  shift 45
	RENUMBER  shift 49
	RESTORE  shift 50
	RESUME  shift 51
	RETURN  shift 52
	RSET  shift 53
	RUN  shift 54
	RUNNH  shift 55
	SAVE  shift 56
	SLEEP  shift 57
	STATS  shift 58
	STOP  shift 59
	TRACE  shift 60
	WAIT  shift 61
	BADFUNCNAME  shift 79
	BADVARIABLE  shift 82
	COMMENT  shift 12
	FNFVAR  shift 76
	FNIVAR  shift 77
	FNSVAR  shift 78
	FVAR  shift 86
	IVAR  shift 87
	SVAR  shift 85
	.  error

	statement_list  goto 89
	statement  goto 8
	string_var  goto 70
	svar  goto 74
	svar_ref  goto 75
	nvar  goto 69
	simple_nvar  goto 72
	nvar_ref  goto 73
	fvar_ref  goto 83
	ivar_ref  goto 84
	fvar  goto 80
	ivar  goto 81
	close_stmt  goto 13
	fn_var  goto 71
	inputc  goto 32
	kill_stmt  goto 33
	open_stmt  goto 42
	print_stmt  goto 43
	assign_stmt  goto 62
	printc  goto 67

state 5
	line:  statement_list.EOL 

	EOL  shift 90
	.  error


state 6
	line:  error.EOL 

	EOL  shift 91
	.  error


state 7
	stmt_no:  INTEGER.    (257)

	.  reduce 257 (src line 2286)


state 8
	statement_list:  statement.COLON statement_list 
	statement_list:  statement.    (8)

	COLON  shift 92
	.  reduce 8 (src line 449)


state 9
	statement:  ASSERT.    (24)

	.  reduce 24 (src line 542)


state 10
	statement:  BYE.    (25)

	.  reduce 25 (src line 549)


state 11
	statement:  CHANGE.string TO simple_nvar 
	statement:  CHANGE.svar TO simple_nvar 
	statement:  CHANGE.simple_nvar TO svar 

	BADVARIABLE  shift 82
	FVAR  shift 86
	IVAR  shift 87
	STRING  shift 96
	SVAR  shift 85
	USTRING  shift 97
	.  error

	string  goto 93
	svar  goto 94
	simple_nvar  goto 95
	fvar  goto 98
	ivar  goto 99

state 12
	statement:  COMMENT.    (29)

	.  reduce 29 (src line 577)


state 13
	statement:  close_stmt.    (30)

	.  reduce 30 (src line 584)


state 14
	statement:  CONT.    (31)

	.  reduce 31 (src line 590)


state 15
	statement:  CONFIG.    (32)

	.  reduce 32 (src line 597)


state 16
	statement:  DATA.data_list 

	FLOAT  shift 106
	EINTEGER  shift 108
	INTEGER  shift 107
	STRING  shift 96
	USTRING  shift 97
	.  error

	string  goto 105
	data_list  goto 100
	data_item  goto 101
	float  goto 102
	integer  goto 103
	einteger  goto 104

state 17
	statement:  DEF.fn_var fn_param_list 
	statement:  DEF.fn_var fn_param_list EQ rpn_expr 

	BADFUNCNAME  shift 79
	FNFVAR  shift 76
	FNIVAR  shift 77
	FNSVAR  shift 78
	.  error

	fn_var  goto 109

state 18
	statement:  DELETE.    (36)
	statement:  DELETE.stmt_range_list 

	INTEGER  shift 7
	.  reduce 36 (src line 668)

	stmt_no  goto 112
	stmt_range_list  goto 110
	stmt_range  goto 111

state 19
	statement:  DENORM.    (38)

	.  reduce 38 (src line 682)


state 20
	statement:  DIM.dim_list 

	BADVARIABLE  shift 82
	FVAR  shift 86
	IVAR  shift 87
	SVAR  shift 85
	.  error

	svar  goto 116
	simple_nvar  goto 115
	fvar  goto 98
	ivar  goto 99
	dim_list  goto 113
	dim_var  goto 114

state 21
	statement:  EDIT.    (40)

	.  reduce 40 (src line 696)


state 22
	statement:  END.    (41)

	.  reduce 41 (src line 703)


state 23
	statement:  FIELD.POUND rpn_expr COMMA field_list 

	POUND  shift 117
	.  error


state 24
	statement:  FOR.simple_nvar EQ expr TO expr 
	statement:  FOR.simple_nvar EQ expr TO expr STEP expr 
	statement:  FOR.simple_nvar EQ rpn_expr while_until 
	statement:  FOR.simple_nvar EQ rpn_expr STEP rpn_expr while_until 

	BADVARIABLE  shift 82
	FVAR  shift 86
	IVAR  shift 87
	.  error

	simple_nvar  goto 118
	fvar  goto 98
	ivar  goto 99

state 25
	statement:  FNEND.    (47)

	.  reduce 47 (src line 815)


state 26
	statement:  GET.POUND rpn_expr get_opts 

	POUND  shift 119
	.  error


state 27
	statement:  GOSUB.stmt_no 

	INTEGER  shift 7
	.  error

	stmt_no  goto 120

state 28
	statement:  GOTO.stmt_no 

	INTEGER  shift 7
	.  error

	stmt_no  goto 121

state 29
	statement:  HELP.    (51)
	statement:  HELP.help_targets 

	BYE  shift 123
	CONFIG  shift 124
	CONT  shift 125
	DELETE  shift 126
	DENORM  shift 127
	EDIT  shift 128
	KILL  shift 129
	LIST  shift 130
	LISTNH  shift 131
	NEW  shift 132
	OLD  shift 133
	RELOAD  shift 134
	RUN  shift 135
	RUNNH  shift 136
	SAVE  shift 137
	STATS  shift 138
	TRACE  shift 139
	.  reduce 51 (src line 839)

	help_targets  goto 122

state 30
	statement:  IF.rpn_expr THEN if_target 
	statement:  IF.rpn_expr GOTO stmt_no 
	statement:  IF.rpn_expr THEN if_target ELSE if_target 

	ABS  shift 155
	ASCII  shift 156
	ATN  shift 157
	CHRS  shift 158
	COS  shift 159
	CVTFS  shift 160
	CVTIS  shift 161
	CVTSF  shift 162
	CVTSI  shift 163
	DATES  shift 164
	DET  shift 165
	ERL  shift 166
	ERR  shift 167
	EXP  shift 168
	FIX  shift 169
	FLOAT  shift 106
	INSTR  shift 170
	INT  shift 171
	LEN  shift 173
	LEFT  shift 172
	LOG  shift 174
	LOG10  shift 175
	MID  shift 176
	NOT  shift 192
	NUMS  shift 177
	PI  shift 178
	POS  shift 179
	RIGHT  shift 180
	RND  shift 181
	SGN  shift 182
	SIN  shift 183
	SPACES  shift 184
	SQR  shift 185
	SWAPI  shift 186
	TAB  shift 187
	TAN  shift 188
	TIME  shift 189
	TIMES  shift 190
	VAL  shift 191
	BADFUNCNAME  shift 79
	BADVARIABLE  shift 82
	EINTEGER  shift 108
	FNFVAR  shift 76
	FNIVAR  shift 77
	FNSVAR  shift 78
	FVAR  shift 86
	INTEGER  shift 107
	IVAR  shift 87
	LPAR  shift 154
	MINUS  shift 147
	PLUS  shift 148
	STRING  shift 96
	SVAR  shift 85
	USTRING  shift 97
	.  error

	string_val  goto 153
	string  goto 193
	string_var  goto 194
	svar  goto 74
	svar_ref  goto 75
	nvar  goto 146
	simple_nvar  goto 72
	nvar_ref  goto 73
	fvar_ref  goto 83
	ivar_ref  goto 84
	fvar  goto 80
	ivar  goto 81
	fn_var  goto 145
	rpn_expr  goto 140
	expr  goto 141
	float  goto 144
	integer  goto 142
	einteger  goto 143
	numeric_par_expr  goto 149
	basic_bif  goto 150
	boolean_ops  goto 151
	logical_ops  goto 152

state 31
	statement:  INPUT.input_list 
	statement:  INPUT.LINE simple_var 
	statement:  INPUT.LINE POUND rpn_expr COMMA simple_var 
	inputc:  INPUT.POUND 

	LINE  shift 196
	BADVARIABLE  shift 82
	FVAR  shift 86
	IVAR  shift 87
	POUND  shift 197
	STRING  shift 96
	SVAR  shift 85
	USTRING  shift 97
	.  error

	string  goto 200
	svar  goto 202
	nvar  goto 201
	simple_nvar  goto 72
	nvar_ref  goto 73
	fvar_ref  goto 83
	ivar_ref  goto 84
	fvar  goto 80
	ivar  goto 81
	input_list  goto 195
	input_item  goto 198
	any_var  goto 199

state 32
	statement:  inputc.rpn_expr COMMA input_list 

	ABS  shift 155
	ASCII  shift 156
	ATN  shift 157
	CHRS  shift 158
	COS  shift 159
	CVTFS  shift 160
	CVTIS  shift 161
	CVTSF  shift 162
	CVTSI  shift 163
	DATES  shift 164
	DET  shift 165
	ERL  shift 166
	ERR  shift 167
	EXP  shift 168
	FIX  shift 169
	FLOAT  shift 106
	INSTR  shift 170
	INT  shift 171
	LEN  shift 173
	LEFT  shift 172
	LOG  shift 174
	LOG10  shift 175
	MID  shift 176
	NOT  shift 192
	NUMS  shift 177
	PI  shift 178
	POS  shift 179
	RIGHT  shift 180
	RND  shift 181
	SGN  shift 182
	SIN  shift 183
	SPACES  shift 184
	SQR  shift 185
	SWAPI  shift 186
	TAB  shift 187
	TAN  shift 188
	TIME  shift 189
	TIMES  shift 190
	VAL  shift 191
	BADFUNCNAME  shift 79
	BADVARIABLE  shift 82
	EINTEGER  shift 108
	FNFVAR  shift 76
	FNIVAR  shift 77
	FNSVAR  shift 78
	FVAR  shift 86
	INTEGER  shift 107
	IVAR  shift 87
	LPAR  shift 154
	MINUS  shift 147
	PLUS  shift 148
	STRING  shift 96
	SVAR  shift 85
	USTRING  shift 97
	.  error

	string_val  goto 153
	string  goto 193
	string_var  goto 194
	svar  goto 74
	svar_ref  goto 75
	nvar  goto 146
	simple_nvar  goto 72
	nvar_ref  goto 73
	fvar_ref  goto 83
	ivar_ref  goto 84
	fvar  goto 80
	ivar  goto 81
	fn_var  goto 145
	rpn_expr  goto 203
	expr  goto 141
	float  goto 144
	integer  goto 142
	einteger  goto 143
	numeric_par_expr  goto 149
	basic_bif  goto 150
	boolean_ops  goto 151
	logical_ops  goto 152

state 33
	statement:  kill_stmt.    (60)

	.  reduce 60 (src line 921)


state 34
	statement:  LSET.set_vars_list EQ rpn_expr 

	SVAR  shift 85
	.  error

	string_var  goto 205
	svar  goto 74
	svar_ref  goto 75
	set_vars_list  goto 204

state 35
	statement:  LIST.    (62)
	statement:  LIST.stmt_range_list 

	INTEGER  shift 7
	.  reduce 62 (src line 937)

	stmt_no  goto 112
	stmt_range_list  goto 206
	stmt_range  goto 111

state 36
	statement:  LISTNH.    (63)
	statement:  LISTNH.stmt_range_list 

	INTEGER  shift 7
	.  reduce 63 (src line 944)

	stmt_no  goto 112
	stmt_range_list  goto 207
	stmt_range  goto 111

state 37
	statement:  MAT.mat_ops 

	INPUT  shift 211
	PRINT  shift 210
	READ  shift 212
	BADVARIABLE  shift 82
	FVAR  shift 86
	IVAR  shift 87
	.  error

	simple_nvar  goto 209
	fvar  goto 98
	ivar  goto 99
	mat_ops  goto 208

state 38
	statement:  NEW.filename 
	filename: .    (182)

	FILENAME  shift 214
	BADFILENAME  shift 215
	.  reduce 182 (src line 1752)

	filename  goto 213

state 39
	statement:  NEXT.simple_nvar 

	BADVARIABLE  shift 82
	FVAR  shift 86
	IVAR  shift 87
	.  error

	simple_nvar  goto 216
	fvar  goto 98
	ivar  goto 99

state 40
	statement:  OLD.filename 
	filename: .    (182)

	FILENAME  shift 214
	BADFILENAME  shift 215
	.  reduce 182 (src line 1752)

	filename  goto 217

state 41
	statement:  ON.rpn_expr GOSUB on_list 
	statement:  ON.rpn_expr GOTO on_list 
	statement:  ON.ERROR GOTO onerror_stmt_no 
	statement:  ON.ERROR GOTO 

	ABS  shift 155
	ASCII  shift 156
	ATN  shift 157
	CHRS  shift 158
	COS  shift 159
	CVTFS  shift 160
	CVTIS  shift 161
	CVTSF  shift 162
	CVTSI  shift 163
	DATES  shift 164
	DET  shift 165
	ERL  shift 166
	ERR  shift 167
	ERROR  shift 219
	EXP  shift 168
	FIX  shift 169
	FLOAT  shift 106
	INSTR  shift 170
	INT  shift 171
	LEN  shift 173
	LEFT  shift 172
	LOG  shift 174
	LOG10  shift 175
	MID  shift 176
	NOT  shift 192
	NUMS  shift 177
	PI  shift 178
	POS  shift 179
	RIGHT  shift 180
	RND  shift 181
	SGN  shift 182
	SIN  shift 183
	SPACES  shift 184
	SQR  shift 185
	SWAPI  shift 186
	TAB  shift 187
	TAN  shift 188
	TIME  shift 189
	TIMES  shift 190
	VAL  shift 191
	BADFUNCNAME  shift 79
	BADVARIABLE  shift 82
	EINTEGER  shift 108
	FNFVAR  shift 76
	FNIVAR  shift 77
	FNSVAR  shift 78
	FVAR  shift 86
	INTEGER  shift 107
	IVAR  shift 87
	LPAR  shift 154
	MINUS  shift 147
	PLUS  shift 148
	STRING  shift 96
	SVAR  shift 85
	USTRING  shift 97
	.  error

	string_val  goto 153
	string  goto 193
	string_var  goto 194
	svar  goto 74
	svar_ref  goto 75
	nvar  goto 146
	simple_nvar  goto 72
	nvar_ref  goto 73
	fvar_ref  goto 83
	ivar_ref  goto 84
	fvar  goto 80
	ivar  goto 81
	fn_var  goto 145
	rpn_expr  goto 218
	expr  goto 141
	float  goto 144
	integer  goto 142
	einteger  goto 143
	numeric_par_expr  goto 149
	basic_bif  goto 150
	boolean_ops  goto 151
	logical_ops  goto 152

state 42
	statement:  open_stmt.    (74)

	.  reduce 74 (src line 1026)


state 43
	statement:  print_stmt.    (75)

	.  reduce 75 (src line 1031)


state 44
	statement:  PUT.POUND rpn_expr put_opts 

	POUND  shift 220
	.  error


state 45
	statement:  RANDOMIZE.    (77)

	.  reduce 77 (src line 1041)


state 46
	statement:  READ.read_list 

	BADVARIABLE  shift 82
	FVAR  shift 86
	IVAR  shift 87
	SVAR  shift 85
	.  error

	svar  goto 202
	nvar  goto 201
	simple_nvar  goto 72
	nvar_ref  goto 73
	fvar_ref  goto 83
	ivar_ref  goto 84
	fvar  goto 80
	ivar  goto 81
	read_list  goto 221
	any_var  goto 222

state 47
	statement:  REM.    (79)

	.  reduce 79 (src line 1055)


state 48
	statement:  RELOAD.    (80)

	.  reduce 80 (src line 1062)


state 49
	statement:  RENUMBER.    (81)
	statement:  RENUMBER.stmt_no 

	INTEGER  shift 7
	.  reduce 81 (src line 1069)

	stmt_no  goto 223

state 50
	statement:  RESTORE.    (83)

	.  reduce 83 (src line 1083)


state 51
	statement:  RESUME.    (84)
	statement:  RESUME.onerror_stmt_no 

	INTEGER  shift 225
	.  reduce 84 (src line 1090)

	onerror_stmt_no  goto 224

state 52
	statement:  RETURN.    (86)

	.  reduce 86 (src line 1104)


state 53
	statement:  RSET.set_vars_list EQ rpn_expr 

	SVAR  shift 85
	.  error

	string_var  goto 205
	svar  goto 74
	svar_ref  goto 75
	set_vars_list  goto 226

state 54
	statement:  RUN.    (88)

	.  reduce 88 (src line 1122)


state 55
	statement:  RUNNH.    (89)

	.  reduce 89 (src line 1129)


state 56
	statement:  SAVE.filename 
	filename: .    (182)

	FILENAME  shift 214
	BADFILENAME  shift 215
	.  reduce 182 (src line 1752)

	filename  goto 227

state 57
	statement:  SLEEP.rpn_expr 

	ABS  shift 155
	ASCII  shift 156
	ATN  shift 157
	CHRS  shift 158
	COS  shift 159
	CVTFS  shift 160
	CVTIS  shift 161
	CVTSF  shift 162
	CVTSI  shift 163
	DATES  shift 164
	DET  shift 165
	ERL  shift 166
	ERR  shift 167
	EXP  shift 168
	FIX  shift 169
	FLOAT  shift 106
	INSTR  shift 170
	INT  shift 171
	LEN  shift 173
	LEFT  shift 172
	LOG  shift 174
	LOG10  shift 175
	MID  shift 176
	NOT  shift 192
	NUMS  shift 177
	PI  shift 178
	POS  shift 179
	RIGHT  shift 180
	RND  shift 181
	SGN  shift 182
	SIN  shift 183
	SPACES  shift 184
	SQR  shift 185
	SWAPI  shift 186
	TAB  shift 187
	TAN  shift 188
	TIME  shift 189
	TIMES  shift 190
	VAL  shift 191
	BADFUNCNAME  shift 79
	BADVARIABLE  shift 82
	EINTEGER  shift 108
	FNFVAR  shift 76
	FNIVAR  shift 77
	FNSVAR  shift 78
	FVAR  shift 86
	INTEGER  shift 107
	IVAR  shift 87
	LPAR  shift 154
	MINUS  shift 147
	PLUS  shift 148
	STRING  shift 96
	SVAR  shift 85
	USTRING  shift 97
	.  error

	string_val  goto 153
	string  goto 193
	string_var  goto 194
	svar  goto 74
	svar_ref  goto 75
	nvar  goto 146
	simple_nvar  goto 72
	nvar_ref  goto 73
	fvar_ref  goto 83
	ivar_ref  goto 84
	fvar  goto 80
	ivar  goto 81
	fn_var  goto 145
	rpn_expr  goto 228
	expr  goto 141
	float  goto 144
	integer  goto 142
	einteger  goto 143
	numeric_par_expr  goto 149
	basic_bif  goto 150
	boolean_ops  goto 151
	logical_ops  goto 152

state 58
	statement:  STATS.    (92)

	.  reduce 92 (src line 1150)


state 59
	statement:  STOP.    (93)

	.  reduce 93 (src line 1157)


state 60
	statement:  TRACE.trace_switches 

	DUMP  shift 231
	VARS  shift 233
	BADVARIABLE  shift 82
	EXEC  shift 232
	FVAR  shift 86
	IVAR  shift 87
	SVAR  shift 85
	.  error

	svar  goto 236
	simple_nvar  goto 235
	simple_var  goto 234
	fvar  goto 98
	ivar  goto 99
	trace_switches  goto 229
	trace_switch  goto 230

state 61
	statement:  WAIT.rpn_expr 

	ABS  shift 155
	ASCII  shift 156
	ATN  shift 157
	CHRS  shift 158
	COS  shift 159
	CVTFS  shift 160
	CVTIS  shift 161
	CVTSF  shift 162
	CVTSI  shift 163
	DATES  shift 164
	DET  shift 165
	ERL  shift 166
	ERR  shift 167
	EXP  shift 168
	FIX  shift 169
	FLOAT  shift 106
	INSTR  shift 170
	INT  shift 171
	LEN  shift 173
	LEFT  shift 172
	LOG  shift 174
	LOG10  shift 175
	MID  shift 176
	NOT  shift 192
	NUMS  shift 177
	PI  shift 178
	POS  shift 179
	RIGHT  shift 180
	RND  shift 181
	SGN  shift 182
	SIN  shift 183
	SPACES  shift 184
	SQR  shift 185
	SWAPI  shift 186
	TAB  shift 187
	TAN  shift 188
	TIME  shift 189
	TIMES  shift 190
	VAL  shift 191
	BADFUNCNAME  shift 79
	BADVARIABLE  shift 82
	EINTEGER  shift 108
	FNFVAR  shift 76
	FNIVAR  shift 77
	FNSVAR  shift 78
	FVAR  shift 86
	INTEGER  shift 107
	IVAR  shift 87
	LPAR  shift 154
	MINUS  shift 147
	PLUS  shift 148
	STRING  shift 96
	SVAR  shift 85
	USTRING  shift 97
	.  error

	string_val  goto 153
	string  goto 193
	string_var  goto 194
	svar  goto 74
	svar_ref  goto 75
	nvar  goto 146
	simple_nvar  goto 72
	nvar_ref  goto 73
	fvar_ref  goto 83
	ivar_ref  goto 84
	fvar  goto 80
	ivar  goto 81
	fn_var  goto 145
	rpn_expr  goto 237
	expr  goto 141
	float  goto 144
	integer  goto 142
	einteger  goto 143
	numeric_par_expr  goto 149
	basic_bif  goto 150
	boolean_ops  goto 151
	logical_ops  goto 152

state 62
	statement:  assign_stmt.    (96)

	.  reduce 96 (src line 1178)


state 63
	close_stmt:  CLOSE.close_list 

	ABS  shift 155
	ASCII  shift 156
	ATN  shift 157
	CHRS  shift 158
	COS  shift 159
	CVTFS  shift 160
	CVTIS  shift 161
	CVTSF  shift 162
	CVTSI  shift 163
	DATES  shift 164
	DET  shift 165
	ERL  shift 166
	ERR  shift 167
	EXP  shift 168
	FIX  shift 169
	FLOAT  shift 106
	INSTR  shift 170
	INT  shift 171
	LEN  shift 173
	LEFT  shift 172
	LOG  shift 174
	LOG10  shift 175
	MID  shift 176
	NOT  shift 192
	NUMS  shift 177
	PI  shift 178
	POS  shift 179
	RIGHT  shift 180
	RND  shift 181
	SGN  shift 182
	SIN  shift 183
	SPACES  shift 184
	SQR  shift 185
	SWAPI  shift 186
	TAB  shift 187
	TAN  shift 188
	TIME  shift 189
	TIMES  shift 190
	VAL  shift 191
	BADFUNCNAME  shift 79
	BADVARIABLE  shift 82
	EINTEGER  shift 108
	FNFVAR  shift 76
	FNIVAR  shift 77
	FNSVAR  shift 78
	FVAR  shift 86
	INTEGER  shift 107
	IVAR  shift 87
	LPAR  shift 154
	MINUS  shift 147
	PLUS  shift 148
	STRING  shift 96
	SVAR  shift 85
	USTRING  shift 97
	.  error

	string_val  goto 153
	string  goto 193
	string_var  goto 194
	svar  goto 74
	svar_ref  goto 75
	nvar  goto 146
	simple_nvar  goto 72
	nvar_ref  goto 73
	fvar_ref  goto 83
	ivar_ref  goto 84
	fvar  goto 80
	ivar  goto 81
	fn_var  goto 145
	rpn_expr  goto 240
	expr  goto 141
	close_list  goto 238
	filenum  goto 239
	float  goto 144
	integer  goto 142
	einteger  goto 143
	numeric_par_expr  goto 149
	basic_bif  goto 150
	boolean_ops  goto 151
	logical_ops  goto 152

state 64
	kill_stmt:  KILL.rpn_expr 

	ABS  shift 155
	ASCII  shift 156
	ATN  shift 157
	CHRS  shift 158
	COS  shift 159
	CVTFS  shift 160
	CVTIS  shift 161
	CVTSF  shift 162
	CVTSI  shift 163
	DATES  shift 164
	DET  shift 165
	ERL  shift 166
	ERR  shift 167
	EXP  shift 168
	FIX  shift 169
	FLOAT  shift 106
	INSTR  shift 170
	INT  shift 171
	LEN  shift 173
	LEFT  shift 172
	LOG  shift 174
	LOG10  shift 175
	MID  shift 176
	NOT  shift 192
	NUMS  shift 177
	PI  shift 178
	POS  shift 179
	RIGHT  shift 180
	RND  shift 181
	SGN  shift 182
	SIN  shift 183
	SPACES  shift 184
	SQR  shift 185
	SWAPI  shift 186
	TAB  shift 187
	TAN  shift 188
	TIME  shift 189
	TIMES  shift 190
	VAL  shift 191
	BADFUNCNAME  shift 79
	BADVARIABLE  shift 82
	EINTEGER  shift 108
	FNFVAR  shift 76
	FNIVAR  shift 77
	FNSVAR  shift 78
	FVAR  shift 86
	INTEGER  shift 107
	IVAR  shift 87
	LPAR  shift 154
	MINUS  shift 147
	PLUS  shift 148
	STRING  shift 96
	SVAR  shift 85
	USTRING  shift 97
	.  error

	string_val  goto 153
	string  goto 193
	string_var  goto 194
	svar  goto 74
	svar_ref  goto 75
	nvar  goto 146
	simple_nvar  goto 72
	nvar_ref  goto 73
	fvar_ref  goto 83
	ivar_ref  goto 84
	fvar  goto 80
	ivar  goto 81
	fn_var  goto 145
	rpn_expr  goto 241
	expr  goto 141
	float  goto 144
	integer  goto 142
	einteger  goto 143
	numeric_par_expr  goto 149
	basic_bif  goto 150
	boolean_ops  goto 151
	logical_ops  goto 152

state 65
	open_stmt:  OPEN.rpn_expr open_mode_opt AS FILE rpn_expr open_opts 

	ABS  shift 155
	ASCII  shift 156
	ATN  shift 157
	CHRS  shift 158
	COS  shift 159
	CVTFS  shift 160
	CVTIS  shift 161
	CVTSF  shift 162
	CVTSI  shift 163
	DATES  shift 164
	DET  shift 165
	ERL  shift 166
	ERR  shift 167
	EXP  shift 168
	FIX  shift 169
	FLOAT  shift 106
	INSTR  shift 170
	INT  shift 171
	LEN  shift 173
	LEFT  shift 172
	LOG  shift 174
	LOG10  shift 175
	MID  shift 176
	NOT  shift 192
	NUMS  shift 177
	PI  shift 178
	POS  shift 179
	RIGHT  shift 180
	RND  shift 181
	SGN  shift 182
	SIN  shift 183
	SPACES  shift 184
	SQR  shift 185
	SWAPI  shift 186
	TAB  shift 187
	TAN  shift 188
	TIME  shift 189
	TIMES  shift 190
	VAL  shift 191
	BADFUNCNAME  shift 79
	BADVARIABLE  shift 82
	EINTEGER  shift 108
	FNFVAR  shift 76
	FNIVAR  shift 77
	FNSVAR  shift 78
	FVAR  shift 86
	INTEGER  shift 107
	IVAR  shift 87
	LPAR  shift 154
	MINUS  shift 147
	PLUS  shift 148
	STRING  shift 96
	SVAR  shift 85
	USTRING  shift 97
	.  error

	string_val  goto 153
	string  goto 193
	string_var  goto 194
	svar  goto 74
	svar_ref  goto 75
	nvar  goto 146
	simple_nvar  goto 72
	nvar_ref  goto 73
	fvar_ref  goto 83
	ivar_ref  goto 84
	fvar  goto 80
	ivar  goto 81
	fn_var  goto 145
	rpn_expr  goto 242
	expr  goto 141
	float  goto 144
	integer  goto 142
	einteger  goto 143
	numeric_par_expr  goto 149
	basic_bif  goto 150
	boolean_ops  goto 151
	logical_ops  goto 152

state 66
	print_stmt:  PRINT.    (175)
	print_stmt:  PRINT.print_list opt_trailing_cs 
	print_stmt:  PRINT.USING rpn_expr COMMA print_list 
	printc:  PRINT.POUND 

	ABS  shift 155
	ASCII  shift 156
	ATN  shift 157
	CHRS  shift 158
	COS  shift 159
	CVTFS  shift 160
	CVTIS  shift 161
	CVTSF  shift 162
	CVTSI  shift 163
	DATES  shift 164
	DET  shift 165
	ERL  shift 166
	ERR  shift 167
	EXP  shift 168
	FIX  shift 169
	FLOAT  shift 106
	INSTR  shift 170
	INT  shift 171
	LEN  shift 173
	LEFT  shift 172
	LOG  shift 174
	LOG10  shift 175
	MID  shift 176
	NOT  shift 192
	NUMS  shift 177
	PI  shift 178
	POS  shift 179
	RIGHT  shift 180
	RND  shift 181
	SGN  shift 182
	SIN  shift 183
	SPACES  shift 184
	SQR  shift 185
	SWAPI  shift 186
	TAB  shift 187
	TAN  shift 188
	TIME  shift 189
	TIMES  shift 190
	USING  shift 244
	VAL  shift 191
	BADFUNCNAME  shift 79
	BADVARIABLE  shift 82
	EINTEGER  shift 108
	FNFVAR  shift 76
	FNIVAR  shift 77
	FNSVAR  shift 78
	FVAR  shift 86
	INTEGER  shift 107
	IVAR  shift 87
	LPAR  shift 154
	MINUS  shift 147
	PLUS  shift 148
	POUND  shift 245
	STRING  shift 96
	SVAR  shift 85
	USTRING  shift 97
	.  reduce 175 (src line 1648)

	string_val  goto 153
	string  goto 193
	string_var  goto 194
	svar  goto 74
	svar_ref  goto 75
	nvar  goto 146
	simple_nvar  goto 72
	nvar_ref  goto 73
	fvar_ref  goto 83
	ivar_ref  goto 84
	fvar  goto 80
	ivar  goto 81
	fn_var  goto 145
	rpn_expr  goto 247
	expr  goto 141
	print_list  goto 243
	float  goto 144
	integer  goto 142
	einteger  goto 143
	print_item  goto 246
	numeric_par_expr  goto 149
	basic_bif  goto 150
	boolean_ops  goto 151
	logical_ops  goto 152

state 67
	print_stmt:  printc.rpn_expr COMMA print_list opt_trailing_cs 
	print_stmt:  printc.rpn_expr USING rpn_expr COMMA print_list opt_trailing_cs 

	ABS  shift 155
	ASCII  shift 156
	ATN  shift 157
	CHRS  shift 158
	COS  shift 159
	CVTFS  shift 160
	CVTIS  shift 161
	CVTSF  shift 162
	CVTSI  shift 163
	DATES  shift 164
	DET  shift 165
	ERL  shift 166
	ERR  shift 167
	EXP  shift 168
	FIX  shift 169
	FLOAT  shift 106
	INSTR  shift 170
	INT  shift 171
	LEN  shift 173
	LEFT  shift 172
	LOG  shift 174
	LOG10  shift 175
	MID  shift 176
	NOT  shift 192
	NUMS  shift 177
	PI  shift 178
	POS  shift 179
	RIGHT  shift 180
	RND  shift 181
	SGN  shift 182
	SIN  shift 183
	SPACES  shift 184
	SQR  shift 185
	SWAPI  shift 186
	TAB  shift 187
	TAN  shift 188
	TIME  shift 189
	TIMES  shift 190
	VAL  shift 191
	BADFUNCNAME  shift 79
	BADVARIABLE  shift 82
	EINTEGER  shift 108
	FNFVAR  shift 76
	FNIVAR  shift 77
	FNSVAR  shift 78
	FVAR  shift 86
	INTEGER  shift 107
	IVAR  shift 87
	LPAR  shift 154
	MINUS  shift 147
	PLUS  shift 148
	STRING  shift 96
	SVAR  shift 85
	USTRING  shift 97
	.  error
